--- a/tarefa-eventos/index.html
+++ b/tarefa-eventos/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Tarefa Eventos</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <main class="container">
+    <button id="btnHello" class="btn btn-primary mt-5">Cumprimentar</button>
+    <button id="btnBckg" class="btn btn-secondary mt-5">Alterar Fundo</button>
+    <br>
+    <img src="img/dog.jpg" id="dogImage" class="mt-3">
   
-  
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
